@@ -7,13 +7,13 @@ package com.stickycoding.rokon;
  * @author Richard
  */
 
-public class Modifier {
+public abstract class Modifier {
 	
 	private Sprite sprite;
 	
 	protected void onCreate(Sprite sprite) {
 		this.sprite = sprite;
-		onStart();
+		onStart(sprite);
 	}
 	
 	/**
@@ -28,32 +28,26 @@ public class Modifier {
 	/**
 	 * Called when the Modifier is added to a Sprite
 	 */
-	public void onStart() {
-		
-	}
+	public abstract void onStart(Sprite sprite);
 	
 	/**
 	 * Called every time Modifier is updated in the rendering thread
 	 * 
 	 * @param sprite Sprite object which this Modifier is associated with
 	 */
-	public void onUpdate(Sprite sprite) {
-		
-	}
+	public abstract void onUpdate(Sprite sprite);
 	
 	/**
 	 * Ends this Modifier, removing it from the Sprite to which it is attached
 	 */
 	public void end() {
 		sprite.removeModifier(this);
-		onEnd();
+		onEnd(sprite);
 	}
 	
 	/**
 	 * Called when the Modifier has ended, and removed from the Sprite
 	 */
-	public void onEnd() {
-		
-	}
+	public abstract void onEnd(Sprite sprite);
 
 }
